K8S/tomcat/tomcat_yaml/v1/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-wyl
  namespace: mt-math
  annotations: 
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: tomcat.bestyunyan.com  #生产中该域名应当可以被公网解析
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
